--- a/index.html
+++ b/index.html
@@ -1,14 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#E66263">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./calendar/vanilla-calendar.min.css">
     <link rel="icon" href="./img/icon.svg">
     <title>Workout Home</title>
 </head>
+
 <body>
-    
+    <div class="layout">
+        <div class="layout__header">
+            <button class="icon-button button_back">
+                <div class="icon-button__icon">
+                    <img src="./img/icons/arr_l.svg">
+                </div>
+            </button>
+            <div class="title">
+                Workout
+            </div>
+            <button class="icon-button">
+                <div class="icon-button__icon">
+                    <img src="./img/icons/time.svg">
+                </div>
+            </button>
+        </div>
+        <div class="layout__body">
+            <div class="view view_exersices exersices">
+                <div class="view__content">
+                    <div class="view__title">
+                        Choose today's workout
+                    </div>
+                    <div class="card-wrapper"></div>
+                    <div class="view__subtitle exersices__subtitle">Before any workout, do a light warm-up</div>
+                </div>
+            </div>
+
+            <div class="view view_training">
+                <div class="view__content np">
+                    <div class="view__content__no__rel">
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="view view_end">
+                <div class="view__content">
+                    <div class="gj">
+                        <div>Good job!</div>
+                        The training is over. Get some rest.
+                    </div>
+                    <img class="end__img" src="./img/exercise/1.png" alt="Rest">
+                    <button class="button button_end">To home</button>
+                </div>
+            </div>
+            <div class="view view_calendar">
+                <div class="view__content">
+                    <div class="calendar-wrap">
+                        <div class="vanilla-calendar"></div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="layout__footer">
+            <button class="icon-button to-home">
+                <div class="icon-button__icon">
+                    <img src="./img/icons/face.svg">
+                </div>
+                <div class="icon-button__text">
+                    Workouts
+                </div>
+            </button>
+            <button class="icon-button to-calendar">
+                <div class="icon-button__icon">
+                    <img src="./img/icons/calendar.svg">
+                </div>
+                <div class="icon-button__text">
+                    Calendar
+                </div>
+            </button>
+        </div>
+    </div>
+    <script src="./modules/mc.js"></script>
+    <script src="./calendar/vanilla-calendar.min.js"></script>
+    <script src="./components/card.js"></script>
+    <script src="./index.js"></script>
 </body>
+
 </html>
